--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,18 +10,23 @@ services:
       - NVIDIA_VISIBLE_DEVICES=0  # Ensures only GPU 0 is visible
     env_file:
       - .env
-    device_requests:
-      - driver: nvidia
-        count: 1
-        capabilities: [gpu]
+    deploy:
+      resources:
+        limits:
+          memory: 24G
+        reservations:
+          devices:
+            - driver: nvidia
+              device_ids: ['5'] # Keep quoting for DEVICE_ID
+              capabilities: [gpu]
     networks:
       - local_network
-    healthcheck:
-      test: ["CMD-SHELL", "curl -s -o /dev/null -w '%{http_code}' http://localhost:8080/health | grep 200"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 30s
+#    healthcheck:
+#      test: ["CMD-SHELL", "curl -s -o /dev/null -w '%{http_code}' http://localhost:8080/health | grep 200"]
+#      interval: 10s
+#      timeout: 5s
+#      retries: 5
+#      start_period: 30s
 
   proxy:
     build:
@@ -32,9 +37,9 @@ services:
       - "8000:8000"
     env_file:
       - .env
-    depends_on:
-      llama:
-        condition: service_healthy
+#    depends_on:
+#      llama:
+#        condition: service_healthy
     networks:
       - local_network
 
